Agnès update rapport

--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -1,30 +1,33 @@
 ---
-title: "rapport"
-author: "Agnès DAVIERE"
-date: '`r Sys.Date()`'
-output: html_document
+title: "Desserte forestière"
+author: "Killian BAUE, Agnès DAVIERE, Louise DUBOST, Elda PERONNET"
+date: "`r Sys.Date()`"
+output:
+  pdf_document:
+    toc: true 
+    toc_depth: 3
+  html_document:
+    toc: true 
+    toc_depth: 3
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Presentation du projet
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+# Méthode
+## Recherche de la desserte
+## Création de buffer autour de la desserte
+## Calcul de la pente
+### Pente avec R
+### Pente avec QGis
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# Résultats
+cartes à fond!
+## Carte de Kiks (parcellaire + desserte à 1km + type de routes)
+## Cartes buffer desserte
+## Carte catégorie pentes (R et QGis)
 
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# Conclusion et discussion / Limites et perspective
