Agnès write method slope

--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -50,7 +50,9 @@ La fonction principale, `get.slope()`, prend en entrée quatre chaînes de carac
 Cela est illustré dans le script ci-dessous.
 
 
-### Pente avec QGis
+### Calcul des pentes avec QGis et comparaison des deux méthodes
+
+La pente a également été calculée à partir de QGis, avec l'outil calcul de pente. Le MNT utilisé en source est le MNT préalablement téléchargé avec `happign`. Le raster de pentes ainsi obtenu préésente des valeurs très proches de celles obtenues avec la fonction `slope()`d'happign. La comparaison des deux rasters "pente" a été réalisée avec la calculatrice raster sur QGis. Les variations entre les deux couches sur la zone d'étude considérée sont comprises entre ... et .... Pour la suite, nous utiliserons donc le raster pente issu d'`happign`. 
 
 # Résultats
 cartes à fond!
