--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -3,10 +3,10 @@ title: "Discrimination des surfaces par distance de débardage et par analyse de
 author: "Killian BAUE, Agnès DAVIERE, Louise DUBOST, Elda PERONNET"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  pdf_document:
     toc: true 
     toc_depth: 3
-  pdf_document:
+  html_document:
     toc: true 
     toc_depth: 3
 ---
@@ -52,13 +52,21 @@ Cela est illustré dans le script ci-dessous.
 
 ### Calcul des pentes avec QGis et comparaison des deux méthodes
 
-La pente a également été calculée à partir de QGis, avec l'outil calcul de pente. Le MNT utilisé en source est le MNT préalablement téléchargé avec `happign`. Le raster de pentes ainsi obtenu présente des valeurs très proches de celles obtenues avec la fonction `slope()`d'happign. La comparaison des deux rasters "pente" a été réalisée avec la calculatrice raster sur QGis. Les variations entre les deux couches sur la zone d'étude considérée sont comprises entre ... et .... Pour la suite et dans l'objectid de l'automatisation de la démarche, nous utiliserons donc le raster pente issu d'`happign`.
+La pente a également été calculée à partir de QGis, avec l'outil calcul de pente. Le MNT utilisé en source est le MNT préalablement téléchargé avec `happign`. Le raster de pentes ainsi obtenu présente des valeurs très proches de celles obtenues avec la fonction `slope()`d'happign. La comparaison des deux rasters "pente" a été réalisée avec la calculatrice raster sur QGis. Les variations entre les deux couches sur la zone d'étude considérée sont comprises entre ... et .... Pour la suite et dans l'objectif de l'automatisation de la démarche, nous utiliserons donc le raster pente issu d'`happign`.
 
 # Résultats
-cartes à fond!
+
 ## Carte de Kiks (parcellaire + desserte à 1km + type de routes)
+
 ## Cartes buffer desserte
+
 ## Carte catégorie pentes (R et QGis)
+
 ## Espoir d'une carte de croisement pentes et desserte
 
 # Conclusion et discussion / Limites et perspective
+
+## Perspective pente: 
+
+Bien que deux méthodes de calcul des pentes aient été testées, le MNT utilisé fut toujours le même, à savoir "ELEVATION.ELEVATIONGRIDCOVERAGE" issu de la BD Alti de l'IGN. D'autres sources de MNT pourraient être testées, comme par exemple le RGE ALTI ou le MNT recalculé avec les données LIDAR.
+De plus, la résolution spatiale utilisée dans l'exemple de ce rapport est de 25m. Il pourrait être envisagé d'intégrer la résolution comme argument de la fonction finale afin de pouvoir l'ajuster selon l'échelle considérée. 
