--- a/rapport/references.bib
+++ b/rapport/references.bib
@@ -1,7 +1,7 @@
-@Manual{,
+@happign{happign,
   title = {happign: R Interface to 'IGN' Web Services},
   author = {Paul Carteron},
   year = {2024},
   note = {R package version 0.3.1},
-  url = {https://CRAN.R-project.org/package=happign},
+  url = {https://CRAN.R-project.org/package=happign}
 }
