--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -9,17 +9,18 @@ output:
   html_document:
     toc: true 
     toc_depth: 3
+bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-![](images/APT_Logo_RVB_Positif.png)
-```{r, include=FALSE}
-citation("happign")
-```
 
+```{r, echo=FALSE, fig.align='center', out.width='100%'}
+setwd(dirname(rstudioapi::getActiveDocumentContext()$path))
+knitr::include_graphics("images/APT_Logo_RVB_Positif.png")
+```
 
 # Presentation du projet
 
@@ -29,7 +30,7 @@ Ce projet a pour objectif d’automatiser la détermination de catégorie de
 surface selon la distance de débardage et la pente sur une zone connue. La 
 distance de débardage par rapport à la desserte est classée selon 3 
 catégories : 20 – 50 – 100m (SOURCE IGN d’ELDA). La couche de desserte et le
-MNT sont récupérés à partir du package happign de R (bibliographie). Le 
+MNT sont récupérés à partir du package `happign` [@happign] de R. Le 
 traitement a ensuite été réalisé en parallèle avec Rstudio et QGis afin de 
 mener une étude comparative. 
 
@@ -66,7 +67,7 @@ La pente a également été calculée à partir de QGis, avec l'outil calcul de 
 
 # Conclusion et discussion / Limites et perspective
 
-## Perspective pente: 
+## Perspective pente
 
 Bien que deux méthodes de calcul des pentes aient été testées, le MNT utilisé fut toujours le même, à savoir "ELEVATION.ELEVATIONGRIDCOVERAGE" issu de la BD Alti de l'IGN. D'autres sources de MNT pourraient être testées, comme par exemple le RGE ALTI ou le MNT recalculé avec les données LIDAR.
 De plus, la résolution spatiale utilisée dans l'exemple de ce rapport est de 25m. Il pourrait être envisagé d'intégrer la résolution comme argument de la fonction finale afin de pouvoir l'ajuster selon l'échelle considérée. 
