--- a/rapport/references.bib
+++ b/rapport/references.bib
@@ -5,3 +5,11 @@
   note = {R package version 0.3.1},
   url = {https://CRAN.R-project.org/package=happign}
 }
+
+@IGN{IGN,
+  title = {IGD_3.1.1_Donnees_Exploitabilite},
+  author = {IGN},
+  year = {2023}, 
+  note = {},
+  url = {https://foret.ign.fr/IGD/}
+}
