--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -29,11 +29,12 @@ opérations de débardage est essentiel pour les gestionnaires forestiers.
 Ce projet a pour objectif d’automatiser la détermination de catégorie de 
 surface selon la distance de débardage et la pente sur une zone connue. La 
 distance de débardage par rapport à la desserte est classée selon 3 
-catégories : 20 – 50 – 100m (SOURCE IGN d’ELDA). La couche de desserte et le
+catégories : 20 – 50 – 100m [@IGN]. La couche de desserte et le
 MNT sont récupérés à partir du package `happign` [@happign] de R. Le 
 traitement a ensuite été réalisé en parallèle avec Rstudio et QGis afin de 
 mener une étude comparative. 
 
+Attention! Mettre à jour la référence IGN! 
 Petite phrase pour dire si oui ou non on y est parvenu ( :
 
 # Méthode
