--- a/rapport/references.bib
+++ b/rapport/references.bib
@@ -11,5 +11,5 @@
   author = {IGN},
   year = {2023}, 
   note = {},
-  url = {https://foret.ign.fr/IGD/}
+  url = {https://foret.ign.fr/IGD/fr/indicateurs/3.1.1}
 }
