--- a/rapport/rapport (1).Rmd
+++ b/rapport/rapport (1).Rmd
@@ -30,7 +30,7 @@ opérations de débardage est essentiel pour les gestionnaires forestiers.
 Ce projet a pour objectif d’automatiser la détermination de catégorie de 
 surface selon la distance de débardage et la pente sur une zone connue. La 
 distance de débardage par rapport à la desserte est classée selon 3 
-catégories : 20 – 50 – 100m [@IGN]. La couche de desserte et le
+catégories : 100 – 200 – 500m [@IGN]. La couche de desserte et le
 MNT sont récupérés à partir du package `happign` [@happign] de R. Le 
 traitement a ensuite été réalisé en parallèle avec Rstudio et QGis afin de 
 mener une étude comparative. 
@@ -457,7 +457,7 @@ La fonction principale, `get.slope()`, prend en entrée quatre chaînes de carac
 
 Cela est illustré dans le script ci-dessous.
 
-```{r,```{r, eval=FALSE}}
+```{r, eval=FALSE}
 # Librairies ----
 librarian::shelf(happign,terra,tmap,sf)
 tmap_mode("view")
